--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jalwa Accurate Signals</title>
+  <title>Earner's club Accurate Signals</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <!-- Meta Pixel Code -->
@@ -29,7 +29,7 @@ src="https://www.facebook.com/tr?id=1669459567068451&ev=PageView&noscript=1"
     <!-- Logo image replaces dart emoji -->
     <div class="logo-block">
   <img src="logo.png" alt="Jalwa Logo" class="logo-img" />
-  <div class="logo-text">Jalwa Sureshot</div>
+  <div class="logo-text">Earner's Club</div>
 </div>
 
     <h1>Lets Grow Toghether.</h1>
@@ -37,7 +37,7 @@ src="https://www.facebook.com/tr?id=1669459567068451&ev=PageView&noscript=1"
       join Kro Mujh Sureshot.
       <br />No Gain? Return Policy
     </p>
-    <button class="cta-button" onclick="window.location.href='https://t.me/+NdSFIroeTMs5ZTQ1'">Join Now</button>
+    <button class="cta-button" onclick="window.location.href='https://t.me/+hgsklMYVP9hiZGQ1'">Join Now</button>
     <div class="timer" id="countdown">Next Signal drops in: 00:00</div>
 
     <div class="testimonials">
@@ -50,6 +50,7 @@ src="https://www.facebook.com/tr?id=1669459567068451&ev=PageView&noscript=1"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
